--- a/q/275590.html
+++ b/q/275590.html
@@ -26,13 +26,35 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>078</td><td>MATL 1 language</td><td>240917T230511Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275600#275600">Luis Men</a></td></tr>
-<tr d-ix="1"><td>203</td><td>ZX Spectrum 48K Basic</td><td>240918T121524Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275609#275609">Neil</a></td></tr>
-<tr d-ix="2"><td>379</td><td>PowerShell</td><td>240918T153022Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275613#275613">bigyihsu</a></td></tr>
+<tr d-ix="0"><td>340</td><td>PowerShell</td><td>240918T153022Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275613#275613">bigyihsu</a></td></tr>
+<tr d-ix="1"><td>078</td><td>MATL 1 language</td><td>240917T230511Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275600#275600">Luis Men</a></td></tr>
+<tr d-ix="2"><td>203</td><td>ZX Spectrum 48K Basic</td><td>240918T121524Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275609#275609">Neil</a></td></tr>
 <tr d-ix="3"><td>677</td><td>Chipmunk Basic</td><td>240918T153621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275614#275614">roblogic</a></td></tr>
 <tr d-ix="4"><td>190</td><td>alsautils</td><td>240918T121158Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275608#275608">Themooni</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a> (1 language), 78 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/PowerShell/PowerShell" rel="nofollow noreferrer">PowerShell</a>, <s>401</s> <s>379</s> 340 bytes</h1>
+<pre class="lang-powershell prettyprint-override"><code>$C=130,146,164,196,261,196,164,146
+$A=110,123,130,174,220,174,130,123
+$G=103,130,155,196,207,196,155,130
+function P($c,$h){0..7|%{$i=$_;if($i-lt4){0..3|%{[console]::Beep(($c[$_])*[math]::Pow(2,$i+$h/12),187)}}else{4..7|%{[console]::Beep(($c[$_])*[math]::Pow(2,8-$i-1+$h/12),187)}}}}
+P $C 0
+P $A 0
+P $C 0
+P $A 0
+P $C -7
+P $C -5
+P $G 0
+P $G 2
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=jZCxboMwEIbVladguErQmNRnDKapGNIMrAzdUBRFyAhLLo4KUQbKk3TJ0qWP1KcpYDq0U6dP_393_0n_--fJXORrW0utr9ePc1cFydfNM-xSDClBHhOMOcGHmLAYZ86axw5sU8RxhYVkXhWcMGY5axY6kKVIl3EU2RQqbMqkQ-pU56bslGnc3IOSQO33dL0Wb7c9qBQOj6ryQAW647Mfjn5RmqY1Wu43mycpT954VsBh798VL8euHt3cXDxGQK2gvkfmE0yEPwxSt7LnNvqfEUkwvsbfMcPg5C7sXDpha_FXBWJhNDGzduYyW-7S8U_X3w" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>An extremely brute-force solution, since I'm a novice at PowerShell golf. Defines a function <code>P</code> that plays a chord (array of numbers, truncated to the nearest integer) at a given half-step offset, first up 4 times then down 4 times. Each note is played using the builtin <code>[System.Console]::Beep</code> method.</p>
+<p>To run, paste this into a <code>.ps1</code> file, then run it in PowerShell.</p>
+<ul>
+<li>-22 from general golfs</li>
+<li>-39 from replacing <code>for</code>-loops with ranges piped into <code>ForEach-Object</code>s.</li>
+</ul>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a> (1 language), 78 bytes</h1>
 <pre><code>0'!4XC@nRAxt~&amp;'F5:ZaKe16:Y)tP[AaABOlHN]0Y(_&amp;vhYs&quot;1875:YPE*76/@12/W*Y,E]&amp;h1e4Y#
 </code></pre>
 <p>This uses equal temperament, with a C<sub>3</sub> frequency of 131.6 Hz (more accurate values could be achieved at the cost of 2 or 3 bytes, namely replacing <code>76</code> in the code by <code>76.4</code> or <code>76.45</code>).</p>
@@ -51,9 +73,9 @@
 <p>A duplicate (<code>t</code>) of this 16×8 matrix is produced, and it is then flipped vertically (<code>P</code>). This represents the descending arpeggios, except that the sign should be negated; and the last row is incorrect, because it does not consider the transition to the next chord. Specifically, the values of the last row should be [5 −1 5 6 0 1 2 NaN] (represented compactly in the code as <code>[AaABOlHN]</code>). The final NaN value indicates that there is no following chord in the last column. Thus, the last row of the second 16×8 matrix is overwritten with that vector (<code>0Y(</code>), and the two matrices are concatenated vertically (<code>&amp;v</code>). The resulting 32×8 matrix describes the repeated up and down arpeggios for each chord, with the correct transition to the next chord. To produce the notes it should be read in column-major order (down, then across).</p>
 <p>To transform the increments between notes into the actual notes, the 0 produced at the beginning of the program is concatenated horizontally (<code>h</code>) with the 32×8 matrix. This causes the matrix to be read in column-major order, and gives a 1×257 row vector. Its cumulative sum (<code>Ys</code>) produces the notes, starting at 0, where each note is represented by the number <em>S</em> of semitones up or down from C<sub>3</sub>. The last value is NaN, which will be interpreted as no note.</p>
 <p>A <em>for each</em> loop (<code>&quot;</code>...<code>]</code>) reads each note, represented by the corresponding number <em>S</em>. To generate the waveform for each note, a time vector [1 2 ... 1875] is first generated (<code>1875:</code>). The length of this vector, when replayed at 10000 samples per second, determines a tempo of 80 bpm, as required. This vector is element-wise multiplied by 2*pi <code>(YPE*)</code>, divided by 76 (<code>76/</code>), and then multiplied by 2 raised to the number that results from dividing <em>S</em> by 12 (<code>@12/W*</code>). Applying the sine function (<code>Y,</code>) produces a 1×1875 vector with samples of a sinusoid of the frequency correponding to <em>S</em>. The values of this vector are multiplied by 2 (<code>E</code>). The last sinusoid contains NaN values and will produce no sound.</p>
-<p>The 257 resulting waveforms, each with 1875 samples, are concatened horizontally (<code>&amp;h</code>) into a single waveform, and this is replayed, without scaling, at the indicated sample rate (<code>1e4Y#</code>). When replaying, sample values are clipped to the interval [1, −1].</p>
+<p>The 257 resulting waveforms, each with 1875 samples, are concatened horizontally (<code>&amp;h</code>) into a single waveform. This waveform is then replayed, without scaling, at the indicated sample rate (<code>1e4Y#</code>). When replaying, sample values are clipped to the interval [1, −1].</p>
 </div>
-<div id="pu1" class="pu"><h1>ZX Spectrum 48K Basic, <s>246</s> 203 bytes</h1>
+<div id="pu2" class="pu"><h1>ZX Spectrum 48K Basic, <s>246</s> 203 bytes</h1>
 <pre><code>  10 LET t=VAL &quot;.14&quot;: LET a$=&quot;&lt;0
 247&lt;?0237&lt;&lt;0247&lt;?0237&lt;C0247&lt;A024
 7&lt;@047;&lt;&gt;047;&lt;&quot;: FOR i=SGN PI TO
@@ -105,24 +127,6 @@ CODE a$(i+k)-CODE a$(i): NEXT k:
 </code></pre>
 <p>Repeat for the remainder of the prelude.</p>
 <p>Edit: Saved 43 bytes thanks to @Arnauld's suggesting of indexing into a single data string.</p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/PowerShell/PowerShell" rel="nofollow noreferrer">PowerShell</a>, <s>401</s> 379 bytes</h1>
-<pre class="lang-powershell prettyprint-override"><code>$C=130,146,164,196,261,196,164,146
-$A=110,123,130,174,220,174,130,123
-$G=103,130,155,196,207,196,155,130
-function P($c,$h){for($i=0;$i-lt8;$i++){if($i-lt4){for($n=0;$n-lt4;$n++){[console]::Beep(($c[$n])*[math]::Pow(2,$i+$h/12),187)}}else{for($n=4;$n-lt8;$n++){[console]::Beep(($c[$n])*[math]::Pow(2,8-$i-1+$h/12),187)}}}}
-P $C 0
-P $A 0
-P $C 0
-P $A 0
-P $C -7
-P $C -5
-P $G 0
-P $G 2
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=lZGxboMwFEXVla9g8ACNUfyMMW4ihjQDKzvKUCEjkFw7CkQZEF_SJUuXflK_pjYmQ7t1OrrPV0eW7sfX2dzkZeikUvf753VsE_H9NKFjASnBwDgGzjC8cEw5LFwy4wE6FAC2QlO8VHOGKfVcMk0DVBZA1ucs8xaSe4vLKQnaq27G3uiwilCDURdPrblEqC_IHvWJGoXFZhNPfRstma0F7QraHSxcoW6MHoySp93uVcpzZHU10qf4uX5_Gzt7rcwtotjaULcFGmMQeTzPUg3yYWTeKP5nFIn9GPy2znNQhegYEoeDx9-U5Cszx9Kfy5D6DdYpHpP8AA" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>An extremely brute-force solution, since I'm a novice at PowerShell golf. Defines a function <code>P</code> that plays a chord (array of numbers, truncated to the nearest integer) at a given half-step offset, first up 4 times then down 4 times. Each note is played using the builtin <code>[System.Console]::Beep</code> method.</p>
-<p>To run, paste this into a <code>.ps1</code> file, then run it in PowerShell.</p>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://www.nicholson.com/rhn/basic/" rel="nofollow noreferrer">Chipmunk Basic</a>, 677 bytes</h1>
 <pre class="lang-basic prettyprint-override"><code>data 131,147,165,196,262,294,330,392,523,587,659,784,1047,1175,1319,1568,2093
