--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240918T214133Z
+"   /golfscore                                      20240918T220338Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
 <a href="q/106976.html">Hex Dump your Source Code                       : 0106976</a>
+<a href="q/65549.html">Write out the Thue-Morse sequence               : 0065549</a>
 <a href="q/275590.html">Play the Final Fantasy Prelude                  : 0275590</a>
 <a href="q/249373.html">Draw the Progress Pride flag                    : 0249373</a>
 <a href="q/258397.html">Number to Binary                                : 0258397</a>
